--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section class="features18 popup-btn-cards cid-rTfExRDOI3" id="features18-q">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="features18 popup-btn-cards cid-rTfExRDOI3" id="features18-q">
 
     
 
@@ -62,7 +62,7 @@
                 <div class="card-wrapper ">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://onlinepetstore.arcadier.io/pages/rottweiler" class="btn btn-primary display-4">Learn More</a></div>
+                        <div class="mbr-section-btn text-center"><a href="page6.html" class="btn btn-primary display-4">Learn More</a></div>
                         <a href="https://onlinepetstore.arcadier.io/pages/rottweiler"><img src="assets/images/-rottweilers-676x451.jpeg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
@@ -77,9 +77,7 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center">
-                            <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
-                        </div>
+                        <div class="mbr-section-btn text-center"><a href="page9.html" class="btn btn-primary display-4">Learn More</a></div>
                         <a href="https://onlinepetstore.arcadier.io/pages/german-shepherd-dog"><img src="assets/images/german-shepherd-dog-676x449.jpeg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
@@ -95,7 +93,7 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://onlinepetstore.arcadier.io/pages/dalmatian" class="btn btn-primary display-4">Learn More</a></div>
+                        <div class="mbr-section-btn text-center"><a href="page8.html" class="btn btn-primary display-4">Learn More</a></div>
                         <img src="assets/images/dalmatians-676x423.jpeg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
@@ -122,7 +120,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://onlinepetstore.arcadier.io/pages/akita"><img src="assets/images/akita-406x271.jpeg" alt="Mobirise" title=""></a>
+                        <a href="page5.html"><img src="assets/images/akita-406x271.jpeg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -136,7 +134,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://onlinepetstore.arcadier.io/pages/afghan-hound"><img src="assets/images/labrador-406x271.jpg" alt="Mobirise" title=""></a>
+                        <a href="page7.html"><img src="assets/images/labrador-406x271.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -150,7 +148,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://onlinepetstore.arcadier.io/pages/bulldog"><img src="assets/images/bulldog-406x271.jpeg" alt="Mobirise" title=""></a>
+                        <a href="page2.html"><img src="assets/images/bulldog-406x271.jpeg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -164,7 +162,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://onlinepetstore.arcadier.io/pages/boxer"><img src="assets/images/boxers1-406x270.jpeg" alt="Mobirise" title=""></a>
+                        <a href="page4.html"><img src="assets/images/boxers1-406x270.jpeg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -177,7 +175,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://onlinepetstore.arcadier.io/pages/chihuahua"><img src="assets/images/chihuahuas-406x271.jpeg" alt="Mobirise" title=""></a>
+                        <a href="page3.html"><img src="assets/images/chihuahuas-406x271.jpeg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -190,7 +188,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/japanese-spitz-406x278.jpg" alt="Mobirise" title="">
+                        <a href="page1.html"><img src="assets/images/japanese-spitz-406x278.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -226,7 +224,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SafSmdYf6bfzn7VeIerSQedoeWA3IYKWpJDNfVZkf7d+3cksx9lLS/7d/qWzS5bsbERrH+FHVCqbUfAzjWPZPon7RhMxmCAhfWXeGCHCKnWr9BOq23tWCr2Uikc4W+hF">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="c99jtP63NYJqQAeJDOHcOJXJwh6JqtyLcCZifixEa3CKKn3k/eUyRXoUoDALUlGYUN7J2Tvksufnm13eu0mUGFRn5YNEmj1+XBL2f2FYbJjjPRCoyfkQFRLAfdZgfCr8">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -309,7 +307,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="B/5sn65pGDyopPD77zagyuaHQo07DEhRLk18UwWZqGzLaOyNbe2GXl60ebKeXLIgEK5AK1YcgfUs6vyzKwwJrEH+ToYQsZaBWgHCGAXZI+mKihWF6gmHoP4sqj6GGWeL">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0aZjZRknOlPqLg0kkhtkc2g8YdLZGLf3SJh6H0VNE937BpqLEgkOMLfxFZ2gd1eIcl6FDyD2VApHx8Dw0JjGd0/DkO1YcppjJvgL5HIcFd5FjDOY8RWUTOac5AasiFeM">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
